<resources>
    <string name="app_name">Demo</string>
    <string name="rahul_sharma">Rahul Sharma</string>
    <string name="click_me">Click Me</string>
    <string name="done">Done</string>
    <string name="about_us">Android Studio is the official integrated development environment for Google\'s Android operating system, built on JetBrains\' IntelliJ IDEA software and designed specifically for Android development. It is available for download on Windows, macOS and Linux based operating systems.</string>
    <string name="enter_your_name">Enter your name…</string>
    <string name="enter_user_weight">Enter User weight</string>
    <string name="enter_user_height_ft">Enter User Height ft</string>
    <string name="enter_user_height_in">Enter User Height in</string>
    <string name="calculator">Calculate BMI</string>
    <string name="result">Result</string>
    <string name="wel_come">Wel-Come My App</string>
    <string name="show_data">Show Data</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="contact_number">Contact Number</string>
    <string name="contact_name">Contact Name</string>
</resources>