<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="600dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:id="@+id/user_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="weight"
                android:ems="13"
                android:hint="@string/enter_user_weight"
                android:inputType="number" />

            <EditText
                android:id="@+id/user_height_ft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="height"
                android:ems="13"
                android:hint="@string/enter_user_height_ft"
                android:inputType="number" />


            <EditText
                android:id="@+id/user_height_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="height"
                android:ems="13"
                android:hint="@string/enter_user_height_in"
                android:inputType="number" />

            <Button
                android:id="@+id/calculator_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/calculator" />

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/result"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/show_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="#0B9402"
                android:text="@string/show_data"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
